package com.my.studydesignpattern.chapter9.practice1;

public interface Observer {

    void update();

}
